--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.5.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "lucide-react": "^0.144.0",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
