--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.11",
     "@upstash/redis": "^1.20.2",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "eslint": "8.38.0",
