--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-auth": "^4.22.0",
     "nodemailer": "^6.9.1",
     "postcss": "8.4.21",
+    "pusher": "^5.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
